--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: motion_blur_scrollable
-description: "Motion blur for scrollable widgets"
-version: 1.5.0
+description: "Motion blur for scrolling widgets"
+version: 1.5.1
 repository: "https://github.com/1l0/motion_blur_scrollable"
 
 environment:
