--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: motion_blur_scrollable
 description: "Motion blur for scrolling widgets"
-version: 1.5.1
+version: 1.6.0-dev.1
 repository: "https://github.com/1l0/motion_blur_scrollable"
 
 environment:
@@ -15,7 +15,3 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
-
-flutter:
-  shaders:
-    - shaders/motion_blur.frag
