--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: motion_blur_scrollable
 description: "Motion blur for scrolling widgets"
-version: 1.6.0-dev.1
+version: 1.6.0
 repository: "https://github.com/1l0/motion_blur_scrollable"
 
 environment:
